# bezy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
assets/fonts/: OFL.txt  README.md
assets/fonts/bezy-grotesk-bold.ufo/: lib.plist
assets/fonts/bezy-grotesk-regular.ufo/: lib.plist
assets/fonts/bezy-grotesk-regular.ufo/glyphs/: a.glif
assets/ufos/test.ufo/: fontinfo.plist  layercontents.plist  metainfo.plist
assets/ufos/test.ufo/glyphs/: A_.glif  contents.plist
docs/: crates-io-release-checklist.md  debugging-selection-deselect.md  duplicate-point-rendering-fix.md  edit-mode-tools-cleanup-plan.md  edit-mode-tools-refactor.md  edit-tools-architecture-analysis.md  fontir-removal-migration.md  fontspector-integration-issue.md  fontspector.md  gizmo-cleanup-complete.md  gizmo-findings.md  ltr-rtl-text-editor-fundamentals.md  qa-demo-script.md  qa-tab-implementation-plan.md  rtl-text-implementation.md  sorts-system.md  source-loading.md  text-system-architecture.md  tui-implementation-plan.md
src/: embedded_assets.rs  lib.rs  main.rs  tests.rs
src/core/: app.rs  cli.rs  config_file.rs  errors.rs  mod.rs  platform.rs  runner.rs  settings.rs  tui_communication.rs
src/core/app/: builder.rs  mod.rs  plugins.rs
src/core/config/: cli.rs  mod.rs  user_config.rs
src/core/io/: gamepad.rs  input.rs  pointer.rs
src/core/state/: app_state.rs  font_metrics.rs  fontir_app_state.rs  mod.rs  navigation.rs  test_components.rs  ufo_point.rs
src/core/state/text_editor/: buffer.rs  editor.rs  mod.rs  text_buffer.rs
src/data/: conversions.rs  fontir_adapter.rs  ufo.rs
src/editing/: mod.rs  offcurve_insertion.rs  smooth_curves.rs  sort_plugin.rs  system_sets.rs  text_editor_plugin.rs  undo_plugin.rs
src/editing/selection/: components.rs  coordinate_system.rs  enhanced_point_component.rs  mod.rs  nudge.rs  point_movement.rs  smooth_curves.rs  systems.rs
src/editing/selection/entity_management/: mod.rs  spawning.rs  sync.rs
src/editing/sort/: manager.rs  mod.rs  plugin.rs
src/font_source/: data.rs  fontir_state.rs  metrics.rs  mod.rs  ufo_point.rs
src/font_source/tests/: affine_transform.rs  mod.rs
src/geometry/: bezpath_editing.rs  mod.rs  point.rs  quadrant.rs  utilities.rs  world_space.rs
src/io/: mod.rs
src/logging/: mod.rs
src/qa/: compiler.rs  fontspector.rs  mod.rs  storage.rs  trigger.rs
src/rendering/: cameras.rs  checkerboard.rs  entity_pools.rs  glyph_renderer.rs  mesh_cache.rs  mesh_utils.rs  metrics.rs  mod.rs  outline_elements.rs  points.rs  post_editing_systems.rs  selection.rs  sort_renderer.rs  sort_visuals.rs  text_cursor.rs  text_sort_rendering.rs  unified_glyph_editing.rs  zoom_aware_scaling.rs
src/systems/: arabic_shaping.rs  commands.rs  fontir_lifecycle.rs  harfbuzz_shaping.rs  input_consumer.rs  lifecycle.rs  mod.rs  plugins.rs  sort_manager.rs  startup_layout.rs  text_buffer_manager.rs  text_shaping.rs  ui_interaction.rs
src/systems/sorts/: cursor.rs  cursor_management.rs  input_utilities.rs  keyboard_input.rs  mod.rs  point_entities.rs  rtl_shaping.rs  sort_entities.rs  sort_placement.rs  text_flow_positioning.rs  unicode_input.rs
src/systems/text_editor_sorts/: input_utilities.rs  keyboard_input.rs  mod.rs  point_entities.rs  rtl_shaping.rs  sort_entities.rs  sort_placement.rs  sort_rendering.rs  unicode_input.rs
src/tools/: adapters.rs  ai.rs  hyper.rs  knife.rs  measure.rs  metaballs.rs  mod.rs  pan.rs  pen.rs  select.rs  shapes.rs  tests.rs  text.rs  text_original.rs  tool_state.rs
src/tools/select/: select_state.rs
src/tui/: app.rs  communication.rs  events.rs  message_handler.rs  mod.rs  ui.rs
src/tui/tabs/: ai.rs  edit.rs  file.rs  font_info.rs  game_of_life.rs  glyph.rs  glyphs.rs  help.rs  logs.rs  mod.rs  path.rs  qa.rs  unicode.rs
src/ui/: file_menu.rs  mod.rs  screen_flash.rs  text_editor.rs  theme.rs
src/ui/edit_mode_toolbar/: config_loader.rs  hyper.rs  keyboard_shortcuts.rs  keyboard_utils.rs  knife.rs  measure.rs  metaballs.rs  mod.rs  pan.rs  pen.rs  select.rs  shapes.rs  spacebar_toggle.rs  text.rs  toolbar_config.rs  ui.rs
src/ui/panes/: coord_pane.rs  coordinate_pane.rs  file_pane.rs  glyph_pane.rs  mod.rs
src/ui/theme_system/: core.rs  embedded_themes.rs  hot_reload.rs  json_theme.rs  layout_constants.rs  legacy_constants.rs  mod.rs  runtime_reload.rs  theme_interface.rs
src/ui/themes/: campfire.json  campfire.rs  dark.json  dark.rs  darkmode.json  darkmode.rs  forest.rs  hot_reload.rs  json_theme.rs  light.json  light.rs  lightmode.json  lightmode.rs  mod.rs  strawberry.json  strawberry.rs
src/utils/: embedded_assets.rs  mod.rs
(+24 files in other folders)
