[package]
name = "bezy"
version = "0.1.0"
authors = ["Eli Heuer <elih@bezy.org>"]
edition = "2021"
description = "A next-gen font editor built with Rust and Bevy for customization and human-AI collaboration"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://bezy.org"
repository = "https://github.com/bezy-dev/bezy"
documentation = "https://docs.rs/bezy"
keywords = ["font", "editor", "typography", "ufo", "bevy"]
categories = ["graphics", "text-editors", "development-tools"]

[dependencies]
bevy = "0.16.1"
bevy_pancam = "0.18.0"
norad = { version = "0.16.0", features = ["kurbo", "rayon"] }
kurbo = { version = "0.12.0", features = ["libm", "serde"] }
lyon = "1.0"
fontir = "0.3.0"
ufo2fontir = "0.2.2"
fontdrasil = "0.2.2"
fontc = "0.3.0"
smol_str = "0.2"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.22"
env_logger = "0.11.3"
plist = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
base64 = "0.22.1"
contour-isobands = "0.4"
cosmic-text = "0.14.2"
harfrust = { git = "https://github.com/harfbuzz/harfrust.git", version = "0.3.1" }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
dirs = "5.0"
ratatui = "0.27"
crossterm = "0.27"
tokio = { version = "1.0", features = ["sync", "time", "rt-multi-thread", "macros"] }
libc = "0.2"
rand = "0.8"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = "0.3"

[features]
# For profiling in development, see:
# https://github.com/bevyengine/bevy/blob/main/docs/profiling.md
dev = [
    "bevy/dynamic_linking",
]
