[package]
name = "bezy"
version = "0.1.0"
authors = ["Eli Heuer <elih@bezy.org>"]
edition = "2021"
rust-version = "1.90.0"
description = "A next-gen font editor built with Rust and Bevy for customization and human-AI collaboration"
license = "GPL-3.0"
readme = "README.md"
homepage = "https://bezy.org"
repository = "https://github.com/bezy-dev/bezy"
documentation = "https://docs.rs/bezy"
keywords = ["font", "editor", "typography", "ufo", "bevy"]
categories = ["graphics", "text-editors", "development-tools"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "bevy_sprite",
    "bevy_scene",
    "bevy_gltf",
    "bevy_animation",
    "bevy_log",
    "bevy_gizmos",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "file_watcher",
    "multi_threaded"
] }
bevy_pancam = "0.18.0"
norad = { version = "0.16.0", features = ["kurbo", "rayon"] }
kurbo = { version = "0.12.0", features = ["libm", "serde"] }
lyon = "1.0"
fontir = "0.3.0"
ufo2fontir = "0.2.2"
fontdrasil = "0.2.2"
fontc = "0.3.0"
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
contour-isobands = "0.4"
harfrust = { git = "https://github.com/harfbuzz/harfrust.git", version = "0.3.1" }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"
dirs = "5.0"
ratatui = { version = "0.27", optional = true }
crossterm = { version = "0.27", optional = true }
tokio = { version = "1.0", features = ["sync", "time", "rt-multi-thread", "process", "fs", "io-util", "macros"] }
libc = "0.2"
rand = "0.8"
# fontspector = "1.5.0"  # Binary only - using CLI interface instead

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = "0.3"

[profile.release]
# Optimize for speed and size
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

# Additional size optimizations
[profile.release.package."*"]
opt-level = "z"  # Optimize dependencies for size

# For maximum size reduction (uncomment if needed):
# lto = "fat"  # More aggressive LTO, but much slower compile time
# incremental = false  # Better for size, worse for compile time

[features]
# For profiling in development, see:
# https://github.com/bevyengine/bevy/blob/main/docs/profiling.md
default = ["tui"]
dev = [
    "bevy/dynamic_linking",
]
tui = ["ratatui", "crossterm"]
